--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,6 @@
   "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
     "skipLibCheck": true,
-    "types" : ["node"]
+    "types" : ["node", "jest"]
   }
 }
