--- a/package.json
+++ b/package.json
@@ -42,22 +42,12 @@
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
+    "detox": "^20.0.3",
     "eslint": "^7.32.0",
-    "jest": "^26.6.3",
+    "jest": "^29",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
   },
   "engines": {
     "npm": ">=8.0.0 <9.0.0",
